--- a/app/src/main/res/layout/viewholder_category.xml
+++ b/app/src/main/res/layout/viewholder_category.xml
@@ -14,6 +14,7 @@
         android:id="@+id/pic"
         android:layout_width="45dp"
         android:layout_height="45dp"
+        android:padding="8dp"
         app:srcCompat="@drawable/grey_bg" />
 
     <TextView
