--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activity.DetailActivity">
 
     <ScrollView
@@ -14,6 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="50dp"
             android:orientation="vertical" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,7 +62,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="350dp"
                     android:background="@drawable/top_corner_bg"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -71,8 +73,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
-                        tools:layout_editor_absoluteX="-16dp"
-                        tools:layout_editor_absoluteY="-16dp">
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
                             android:id="@+id/titleTxt"
@@ -170,6 +173,7 @@
                                     android:textColor="@color/darkBlue"
                                     android:textStyle="bold"
                                     app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.57"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -203,6 +207,7 @@
                                 android:layout_margin="8dp"
                                 android:background="@color/blue" />
 
+
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
@@ -217,6 +222,7 @@
                                     android:textColor="@color/darkBlue"
                                     android:textStyle="bold"
                                     app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.6"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -244,7 +250,7 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <View
-                                android:id="@+id/view4"
+                                android:id="@+id/viewSecond"
                                 android:layout_width="1dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
@@ -320,7 +326,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="80dp"
         android:background="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -328,12 +334,13 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/addToCartBtn"
+            style="@android:style/Widget.Button"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:text="Add to cart"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/blue_bg"
-            style="@android:style/Widget.Button"
+            android:text="Add to cart"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -345,6 +352,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginBottom="16dp"
             android:text="$000"
             android:textColor="@color/blue"
             android:textSize="25sp"
