--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -264,6 +264,7 @@
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
         android:layout_width="match_parent"
+        android:id="@+id/bottom_navigation"
         android:layout_height="70dp"
         app:cnb_menuResource="@menu/menu_bottom"
         android:background="@color/white"
