--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -285,7 +285,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/downloadTicketBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
