--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -50,7 +50,7 @@
                         app:srcCompat="@drawable/back" />
 
                     <ImageView
-                        android:id="@+id/imageView8"
+                        android:id="@+id/favBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="24dp"
