--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="372dp"
+                android:layout_width="match_parent"
                 android:layout_height="79dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
@@ -48,7 +48,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/notificationBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -60,16 +60,16 @@
                     android:id="@+id/imageView7"
                     android:layout_width="44dp"
                     android:layout_height="43dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="@+id/imageView"
+                    app:layout_constraintBottom_toBottomOf="@+id/notificationBtn"
+                    app:layout_constraintTop_toTopOf="@+id/notificationBtn"
                     app:srcCompat="@drawable/user" />
 
                 <ImageView
                     android:id="@+id/imageView10"
                     android:layout_width="44dp"
                     android:layout_height="46dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="@+id/imageView"
+                    app:layout_constraintBottom_toBottomOf="@+id/notificationBtn"
+                    app:layout_constraintTop_toTopOf="@+id/notificationBtn"
                     app:srcCompat="@drawable/meshan"
                     tools:layout_editor_absoluteX="0dp" />
 
