--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -54,6 +54,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="24dp"
+                        android:clickable="true"
+                        android:focusable="true"
                         app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/backBtn"
@@ -169,13 +171,12 @@
                                     android:id="@+id/directionTxt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="16dp"
-                                    android:text="Direction"
-                                    android:textColor="@color/darkBlue"
-                                    android:textStyle="bold"
+                                    android:layout_marginBottom="15dp"
                                     android:clickable="true"
                                     android:focusable="true"
                                     android:linksClickable="true"
+                                    android:text="Direction"
+                                    android:textColor="@color/darkBlue"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent" />
@@ -184,7 +185,7 @@
                                     android:id="@+id/imageView101"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="8dp"
+                                    android:layout_marginBottom="4dp"
                                     app:layout_constraintBottom_toTopOf="@+id/directionTxt"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -261,7 +262,6 @@
                                     android:layout_marginBottom="16dp"
                                     android:text="Weather"
                                     android:textColor="@color/darkBlue"
-                                    android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintHorizontal_bias="0.509"
@@ -323,7 +323,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:background="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
